<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">A key to clean open-source version</string>
    <string name="short_cut_name">A key to accelerate</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_memory_clean">Memory acceleration</string>
    <string name="app_rublish_clean">Garbage clean - up</string>
    <string name="app_autostart_manage">Self-Kai management</string>
    <string name="app_software_manage">Software Management</string>
    <string name="cleaned">Clean up the garbage</string>
    <string name="empty_cache">The cache is empty.</string>
    <string name="scanning">Scanning ...</string>
    <string name="scanning_m_of_n">Scanning</string>
    <string name="software_top_text">Installed software, occupies storage space</string>

    <string name="category_other">Other</string>
    <string name="category_def">General Settings</string>
    <string name="settings_basic">basic settings</string>
    <string name="category_advanced">advanced settings</string>
    <string name="settings_about">About</string>
    <string name="settings_version_update">Check for updates</string>
    <string name="settings_grade">Give me praise</string>
    <string name="settings_share">Recommend to friends</string>

    <string name="title_settings">Settings</string>
<string name="app_information">Dear! kisses! A key to clean open-source version. Efficient, fast and accurate clean-up mobile phone trash,
    enhance mobile phone speed. \ Open source to ensure security Due to time constraints, errors and omissions are
    inevitable\If you can give valuable advice and advice, it will be excellent Oh! What Mody!
</string>
    <string name="all_rights_reserved">Copyright © 2012-2015 zaiyong. All Rights Reserved.</string>
    <string name="home_title">About</string>
    <string name="app_version">V</string>
    <string name="alert_confirm_button">Confirm</string>
    <string name="alert_cancel_button">Cancel</string>
    <string name="not_found">Not found</string>
    <string name="msg_turned_on">TurnedOn</string>
    <string name="disabled_button">Disable</string>
    <string name="root_msg">This feature requires root access to the system</string>
    <string name="disabled_msg">The application has all been disabled</string>
    <string name="root_msg_allow">This feature requires root access to the system, please allow access to root privileges</string>
    <string name="enhance_speed_msg">Prohibit the following software from Kai, can enhance the speed</string>
    <string name="enhance_speed_msg_long">Prohibit the system core software from Kai, will affect the normal use of mobile phones,
        please exercise caution</string>
    <string name="optimised">Can be optimized</string>
    <string name="paragraph">paragraph</string>
    <string name="common_software">Common software</string>
    <string name="core_system">System core software</string>
    <string name="exit_msg">Press again to exit the application</string>
    <string name="clean_up">A total of clean-up</string>
    <string name="ram">RAM</string>
    <string name="current_version">current version：</string>
    <string name="latest_version_update">The current version is the latest version!</string>
    <string name="open_source_version_msg">A key to clean up (open source version) a key to clean up the phone process,
        really good Yeah, recommend you use!</string>
    <string name="key_to_accelerate">A key to accelerate</string>
    <string name="shortcut_ico_msg">One-key acceleration "shortcut icon has been created</string>
    <string name="cannot_open_app_msg">"Can not open application market"</string>
    <string name="clean_up_file">One-click cleanup open source version for you to release</string>
    <string name="ram_">RAM</string>
    <string name="cleaned_memory">You just cleaned the memory, please come back later</string>
    <string name="user_softwares">User software</string>
    <string name="pre_installed_sw">Preinstalled software</string>
    <string name="normal_use_msg">Uninstall the following software, will affect the normal use</string>
    <string name="accelerate">A key to accelerate</string>
    <string name="version_info">Version Information</string>
    <string name="author">Author:</string>
    <string name="open_source_version">A key to clean open-source version</string>
    <string name="screen_note">Spring and summer together</string>
    <string name="app_prohibition_msg">Non-system application is prohibited</string>
    <string name="storage">Storage</string>
    <string name="msg_ram">RAM</string>
    <string name="memory_acceleration">Memory acceleration</string>
    <string name="garbage_clean_up">Garbage clean - up</string>
    <string name="self_management">Self-Kai management</string>
    <string name="home">Home</string>
    <string name="relax">Relax</string>
    <string name="settings">Settings</string>
    <string name="start">Start / background from Kai</string>
    <string name="uninstall">Uninstall</string>
    <string name="applicatoin_download">Boutique application recommended download</string>
    <string name="disabled">Disabled</string>
    <string name="turned_onn">Turned On</string>
    <string name="one_click_acceleration">Create one-click acceleration shortcuts</string>
    <string name="stong_clean_title">Strong clean-up</string>
    <string name="can_clean_up_memory">Can clean up memory</string>
    <string name="ket_to_clean">A key to clean up</string>
    <string name="can_be_cleaned">Can be cleaned</string>

    ////////////////////////////////////////////////////////////////////////////////////////


</resources>



