<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/category_def">
        <Preference
            android:key="createShortCut"
            android:title="@string/one_click_acceleration" />
        <SwitchPreference
            android:key="powerClear"
            android:title="@string/stong_clean_title"
            android:enabled="false"
            android:summary="@string/root_msg" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/category_other">
        <Preference
            android:key="pShare"
            android:title="@string/settings_share" />

        <Preference
            android:key="pGrade"
            android:title="@string/settings_grade" />
        <Preference
            android:key="pVersionDetail"
            android:title="@string/version_info" />
        <Preference
            android:key="pVersion"
            android:title="@string/settings_version_update" />
        <Preference
            android:key="pGithub"
            android:title="Github"
            android:summary="github.com/joyoyao/superCleanMaster"
            />

        <Preference
            android:key="pAbout"
            android:title="@string/settings_about" />
    </PreferenceCategory>

</PreferenceScreen>
